# fetch-dataeng-takehome

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  tox.ini
fetchrewards_takehome/: app.py  config.ini  extract.py  load.py  transform.py  utils.py
tests/: test_config.py  test_sqs.py
