[tool.poetry]
name = "fetchrewards-takehome"
version = "0.1.0"
description = ""
authors = ["Tyler Heist <email@tylerheist.com>"]
readme = "README.md"
packages = [{include = "fetchrewards_takehome"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.5"
cryptography = "^39.0.2"
localstack-client = "^1.39"
pandas = "^1.5.3"
sqlalchemy = "^2.0.5.post1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = [ "py36" ]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | docs
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
